--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Олимпиадники</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+<!--    <noscript>You need to enable JavaScript to run this app.</noscript>-->
     <div id="root"></div>
   </body>
 </html>
